Disable Glue database

--- a/stacks/shared-glue-database.yml
+++ b/stacks/shared-glue-database.yml
@@ -10,7 +10,7 @@ Parameters:
   RootStackName: { Type: String }
 
 Resources:
-  SharedGlueTable:
+  SharedGlueDatabase:
     Type: AWS::Glue::Database
     Properties:
       CatalogId: !Ref AWS::AccountId
@@ -18,3 +18,7 @@ Resources:
         Description: !Sub >-
           Shared database for ${EnvironmentType} ${RootStackName} stack
         Name: !Ref RootStackName
+
+Outputs:
+  SharedGlueDatabaseName:
+    Value: !Ref SharedGlueDatabase
