Fix table parameters

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -196,16 +196,13 @@ Resources:
         Description: !Sub >-
           ${EnvironmentType} shared ALB logs
         Name: !GetAtt Alb.LoadBalancerName
-        Parameters: !Sub |-
-          {
-            "projection.enabled": "true",
-            "projection.date.type": "date",
-            "projection.date.range": "2021/01/01,NOW",
-            "projection.date.format": "yyyy/MM/dd",
-            "projection.date.interval": "1",
-            "projection.date.interval.unit": "DAYS",
-            "storage.location.template": "s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/${!date}"
-          }
+        Parameters:
+          projection.enabled: "true"
+          projection.date.type: "date"
+          projection.date.range: "2021/01/01NOW"
+          projection.date.format: "yyyy/MM/dd"
+          projection.date.interval: "1"
+          projection.date.interval.unit: "DAYS"
         PartitionKeys:
           - Name: date
             Type: string
@@ -282,9 +279,9 @@ Resources:
           OutputFormat: IgnoreKeyTextOutputFormat
           SerdeInfo:
             Parameters:
-              serialization.format: 1
               input.regex: >-
                 ([^ ]*) ([^ ]*) ([^ ]*) ([^ ]*):([0-9]*) ([^ ]*)[:-]([0-9]*) ([-.0-9]*) ([-.0-9]*) ([-.0-9]*) (|[-0-9]*) (-|[-0-9]*) ([-0-9]*) ([-0-9]*) \"([^ ]*) ([^ ]*) (- |[^ ]*)\" \"([^\"]*)\" ([A-Z0-9-]+) ([A-Za-z0-9.-]*) ([^ ]*) \"([^\"]*)\" \"([^\"]*)\" \"([^\"]*)\" ([-.0-9]*) ([^ ]*) \"([^\"]*)\" \"([^\"]*)\" \"([^ ]*)\" \"([^\s]+?)\" \"([^\s]+)\" \"([^ ]*)\" \"([^ ]*)\"
+              serialization.format: "1"
             SerializationLibrary: org.apache.hadoop.hive.serde2.RegexSerDe
         TableType: EXTERNAL_TABLE
 
