Remove table name

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -195,7 +195,7 @@ Resources:
       TableInput:
         Description: !Sub >-
           ${EnvironmentType} shared ALB logs
-        Name: !GetAtt Alb.LoadBalancerName
+        # Name: !GetAtt Alb.LoadBalancerName
         Parameters:
           projection.enabled: "true"
           projection.date.type: "date"
