Add more ALB log tables

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -53,6 +53,7 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedRdsPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
+  SharedGlueDatabaseName: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -284,6 +285,7 @@ Resources:
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
