--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -33,6 +33,7 @@ Parameters:
   ExchangeHostname: { Type: String }
   IdHostname: { Type: String }
   DovetailRedisHostname: { Type: String }
+  SharedGlueDatabaseName: { Type: String }
 
   DovetailAnalyticsLambdaCodeS3ObjectKey: { Type: String }
 
@@ -105,6 +106,7 @@ Resources:
         DovetailRedisHostname: !Ref DovetailRedisHostname
         DynamoDbKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM
         MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM
+        SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
         # For legacy stack
         DovetailLegacyEcrImageTag: !Ref DovetailLegacyEcrImageTag
         DovetailLegacySecretsVersion: !Ref DovetailLegacySecretsVersion
