--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1062,6 +1062,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
+        SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
 
         # App-specific parameters
 
@@ -1140,6 +1141,7 @@ Resources:
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         IdHostname: !GetAtt Constants.IdHostname
         DovetailRedisHostname: !Ref DovetailRedisHostname
+        SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
 
         # App-specific parameters
 
