Fix partition ranges

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -252,7 +252,7 @@ Resources:
         Parameters:
           projection.enabled: "true"
           projection.date.type: "date"
-          projection.date.range: "2021/01/01NOW"
+          projection.date.range: "2021/01/01,NOW"
           projection.date.format: "yyyy/MM/dd"
           projection.date.interval: "1"
           projection.date.interval.unit: "DAYS"
