Fix table formats

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -274,7 +274,7 @@ Resources:
               Type: string
             - Name: classification_reason
               Type: string
-          InputFormat: TextInputFormat
+          InputFormat: org.apache.hadoop.mapred.TextInputFormat
           Location: !Sub s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/
           OutputFormat: IgnoreKeyTextOutputFormat
           SerdeInfo:
