--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -327,9 +327,9 @@ Resources:
               Type: string
             - Name: classification_reason
               Type: string
-          InputFormat: TextInputFormat
+          InputFormat: org.apache.hadoop.mapred.TextInputFormat
           Location: !Sub s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/
-          OutputFormat: IgnoreKeyTextOutputFormat
+          OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
           SerdeInfo:
             Parameters:
               input.regex: >-
