Add missing storage location templates

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -261,6 +261,7 @@ Resources:
           projection.date.format: "yyyy/MM/dd"
           projection.date.interval: "1"
           projection.date.interval.unit: "DAYS"
+          storage.location.template: !Sub "s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/${!date}"
         PartitionKeys:
           - Name: date
             Type: string
