--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -203,6 +203,7 @@ Resources:
           projection.date.format: "yyyy/MM/dd"
           projection.date.interval: "1"
           projection.date.interval.unit: "DAYS"
+          storage.location.template: !Sub "s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/${!date}"
         PartitionKeys:
           - Name: date
             Type: string
