Fix query names

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -293,7 +293,7 @@ Resources:
       Database: !Ref SharedGlueDatabaseName
       Description: >-
         View recent ALB requests using the table's date partitions
-      Name: !Sub ${EnvironmentType} Shared ALB Recent Requests
+      Name: !Sub ${EnvironmentType} Feeder ALB Recent Requests
       QueryString: !Sub >-
         SELECT *
         FROM "${SharedGlueDatabaseName}"."${AccessLogsGlueTable}"
