--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -349,7 +349,7 @@ Resources:
       Database: !Ref SharedGlueDatabaseName
       Description: >-
         View recent ALB requests using the table's date partitions
-      Name: !Sub ${EnvironmentType} Shared ALB Recent Requests
+      Name: !Sub ${EnvironmentType} Dovetail Router ALB Recent Requests
       QueryString: !Sub >-
         SELECT *
         FROM "${SharedGlueDatabaseName}"."${AccessLogsGlueTable}"
