--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -277,7 +277,7 @@ Resources:
               Type: string
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
           Location: !Sub s3://${AccessLogsBucket}/AWSLogs/${AWS::AccountId}/elasticloadbalancing/${AWS::Region}/
-          OutputFormat: IgnoreKeyTextOutputFormat
+          OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
           SerdeInfo:
             Parameters:
               input.regex: >-
