Reuse DDB connections

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -128,6 +128,7 @@ Resources:
       Description: Dovetail analytics to dynamodb
       Environment:
         Variables:
+          AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
           DYNAMODB: "true" # set function mode = dynamodb
           DDB_TABLE: !Ref DynamodbTableName
           DDB_ROLE: !Ref DynamodbAccessRole
