Add Counts and Analytics to VPC

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -154,6 +154,7 @@ Resources:
         RootStackId: !Ref RootStackId
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
+        VpcId: !Ref VpcId
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
