--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -19,6 +19,7 @@ Parameters:
   RootStackId: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
+  VpcId: { Type: AWS::EC2::VPC::Id }
   VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
@@ -35,6 +36,28 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
+  CountsFunctionSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: !Sub >-
+        The security group for ${EnvironmentType} Dovetail Counts Lambda
+        function that allows all outbound traffic
+      SecurityGroupEgress:
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: "-1"
+        - CidrIpv6: ::/0
+          IpProtocol: "-1"
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_dovetail-counts_function" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Counts }
+      VpcId: !Ref VpcId
   CountsFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -98,14 +121,13 @@ Resources:
         prx:dev:family: Dovetail
         prx:dev:application: Counts
       Timeout: 30
-      # TODO
-      # VpcConfig:
-      #   SecurityGroupIds:
-      #     - !Ref VPCSecurityGroup
-      #   SubnetIds:
-      #     - !Ref VpcPrivateSubnet1Id
-      #     - !Ref VpcPrivateSubnet2Id
-      #     - !Ref VpcPrivateSubnet3Id
+      VpcConfig:
+        SecurityGroupIds:
+          - !GetAtt CountsFunctionSecurityGroup.GroupId
+        SubnetIds:
+          - !Ref VpcPrivateSubnet1Id
+          - !Ref VpcPrivateSubnet2Id
+          - !Ref VpcPrivateSubnet3Id
   CountsFunctionLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
