--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -18,6 +18,10 @@ Metadata:
           - DestinationBucket
           - DestinationPrefix
           - EnvironmentType
+      - Label:
+          default: Data Filters
+        Parameters:
+          - PodcastIds
     ParameterLabels:
       LogBucket:
         default: Bucket where CloudFront is logging
@@ -29,6 +33,8 @@ Metadata:
         default: Path within destination
       EnvironmentType:
         default: Environment type
+      PodcastIds:
+        default: Podcast IDs to include
 
 Parameters:
   LogBucket:
@@ -49,15 +55,9 @@ Parameters:
       - Testing
       - Staging
       - Production
-
-Mappings:
-  EnvironmentTypeMap:
-    Testing:
-      abbreviation: test
-    Staging:
-      abbreviation: stag
-    Production:
-      abbreviation: prod
+  PodcastIds:
+    Type: String
+    Description: eg. 32,85,158,99
 
 Resources:
   ShipperFunction:
@@ -70,15 +70,115 @@ Resources:
         Variables:
           DESTINATION_BUCKET: !Ref DestinationBucket
           DESTINATION_PREFIX: !Ref DestinationPrefix
+          PODCAST_IDS: !Ref PodcastIds
       Handler: index.handler
       InlineCode: |
         const AWS = require('aws-sdk');
+        const s3 = new AWS.S3();
+        const zlib = require('zlib');
+        const util = require('util');
+        const gunzip = util.promisify(zlib.gunzip);
+        const gzip = util.promisify(zlib.gzip);
+        const crypto = require('crypto');
+
+        const IPV4_MASK = /\.[0-9]{1,3}$/;
+        const IPV6_MASK = /:[0-9a-fA-F]{0,4}$/;
+        const maskIp = (ip, field) => {
+          if (ip.match(IPV4_MASK)) {
+            return ip.replace(IPV4_MASK, '.0');
+          } else if (ip.endsWith(':')) {
+            return ip;
+          } else if (ip.match(IPV6_MASK)) {
+            return ip.replace(IPV6_MASK, ':0');
+          } else {
+            console.warn(`Unrecognized ${field}: ${ip}`);
+            return ip;
+          }
+        };
+
+        const PODCAST_IDS = process.env.PODCAST_IDS.split(',').map(s => s.trim()).filter(s => s);
+
         exports.handler = async (event) => {
-          console.log(JSON.stringify(event));
+          for (const rec of event.Records) {
+            const Bucket = rec.s3.bucket.name;
+            const Key = rec.s3.object.key;
+            const result = await s3.getObject({ Bucket, Key }).promise();
+            const log = await gunzip(result.Body);
+            const rows = log.toString('utf-8').split('\n').filter(r => r).map(r => r.split('\t'));
+
+            // ensure we know what this is
+            const version = rows.shift()[0];
+            if (version !== '#Version: 1.0') {
+              throw new Error(`Unsupported CloudFront Log Version: ${version}`);
+            }
+
+            // get fieldnames from comment
+            const fields = rows.shift()[0].replace(/^#Fields: /, '').split(' ');
+            const mappedRows = rows.map(row => {
+              return row.reduce((acc, val, idx) => ({ ...acc, [fields[idx]]: val}), {});
+            });
+
+            // podcast id and episode guid (only works for dovetail3-cdn requests)
+            const datas = mappedRows.filter(data => {
+              const parts = data['cs-uri-stem'].split('/').filter(s => s);
+              if (parts.length === 4) {
+                data['prx-podcast-id'] = parts[0];
+                data['prx-episode-guid'] = parts[1];
+              } else if (parts.length === 5) {
+                data['prx-podcast-id'] = parts[0];
+                data['prx-episode-guid'] = parts[2];
+              } else {
+                console.warn(`Non-dovetail3 uri: ${data['cs-uri-stem']}`);
+              }
+              return PODCAST_IDS.includes(data['prx-podcast-id']);
+            });
+            fields.push('prx-podcast-id');
+            fields.push('prx-episode-guid');
+
+            // calculate listener_ids
+            datas.forEach(data => {
+              const literalIp = data['x-forwarded-for'] || data['c-ip'] || '';
+              const userAgent = data['cs(User-Agent)'] || '';
+              const hmac = crypto.createHmac('sha256', process.env.SECRET_KEY || '');
+              hmac.update(literalIp + userAgent);
+              data['prx-listener-id'] = hmac.digest('base64').replace(/\+|\/|=/g, m => {
+                if (m === '+') { return '-'; }
+                if (m === '/') { return '_'; }
+                return '';
+              });
+            });
+            fields.push('prx-listener-id');
+
+            // mask IP addresses
+            datas.forEach(data => {
+              data['c-ip'] = maskIp(data['c-ip'], 'c-ip');
+              const xffParts = (data['x-forwarded-for'] || '').split(',').map(s => s.trim()).filter(s => s);
+              data['x-forwarded-for'] = xffParts.map(ip => maskIp(ip, 'x-forwarded-for')).join(', ');
+            });
+
+            // write to tsv and gzip
+            const tsv = fields.join('\t') + '\n' + datas.map(data => {
+              return fields.map(f => data[f] || '').join('\t');
+            }).join('\n');
+            const buffer = await gzip(tsv);
+
+            // send to destination s3
+            const params = {
+              Bucket: process.env.DESTINATION_BUCKET,
+              Key: `${process.env.DESTINATION_PREFIX}/${Key.split('/').pop()}`,
+              Body: buffer
+            };
+            if (datas.length > 0) {
+              await s3.putObject(params).promise();
+            }
+
+            console.info(`Shipped ${datas.length} of ${rows.length} to s3://${params.Bucket}/${params.Key}`);
+          }
         };
       MemorySize: 512
       Policies:
         - !Ref LogBucketReadPolicy
+        - !Ref DestinationBucketWritePolicy
       Runtime: nodejs14.x
       Tags:
         prx:meta:tagging-version: "2021-04-07"
@@ -92,11 +192,21 @@ Resources:
     Properties:
       PolicyDocument:
         Statement:
-          - Action: s3:GetBucketNotification
+          - Action:
+              - s3:GetObject
+              - s3:GetObjectVersion
             Effect: Allow
-            Resource: !Sub arn:aws:s3:::${LogBucket}
-          - Action: s3:PutBucketNotification
+            Resource: !Sub arn:aws:s3:::${LogBucket}/${LogPrefix}/*
+        Version: "2012-10-17"
+  DestinationBucketWritePolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Statement:
+          - Action:
+              - s3:PutObject
+              - s3:PutObjectTagging
             Effect: Allow
-            Resource: !Sub arn:aws:s3:::${LogBucket}
+            Resource: !Sub arn:aws:s3:::${DestinationBucket}/${DestinationPrefix}/*
         Version: "2012-10-17"
   # TODO s3 trigger
