--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -1,4 +1,8 @@
 # cdn/log-shipper.yml
+#
+# NOTE: as the source LogBucket exists outside of this stack, you must create
+# the S3 Event Notification trigger must be created manually.  Just select the
+# "All object create events" option, and fill in the bucket/prefix.
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
