Add dev family tag

--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -189,6 +189,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: Dovetail
         prx:dev:application: Log Shipper
       Timeout: 30
   LogBucketReadPolicy:
