--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -189,9 +189,13 @@ Resources:
               Resource: !Sub arn:aws:s3:::${LogBucket}/${LogPrefix}/*
           Version: "2012-10-17"
         - Statement:
+            - Action: s3:ListBucketMultipartUploads
+              Effect: Allow
+              Resource: !Sub arn:aws:s3:::${DestinationBucket}
             - Action:
-                - s3:PutObject
-                - s3:PutObjectTagging
+                - s3:AbortMultipartUpload
+                - s3:ListMultipartUploadParts
+                - s3:PutObject*
               Effect: Allow
               Resource: !Sub arn:aws:s3:::${DestinationBucket}/${DestinationPrefix}/*
           Version: "2012-10-17"
