--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -274,11 +274,49 @@ Resources:
       TargetType: instance
       UnhealthyThresholdCount: 3
       VpcId: !Ref VpcId
-  ProxyTargetGroupHttp5xxAlarm:
+  ProxyTargetGroupSustainedHttp5xxAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
+      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> SUSTAINED 5XX ERRORS
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Play's feed proxy server is returning 5XX errors
+        from the ECS service to the load balancer.
+      ComparisonOperator: GreaterThanThreshold
+      DatapointsToAlarm: 3 # M in M-out-of-N alarms
+      Dimensions:
+        - Name: LoadBalancer
+          Value: !Ref AlbFullName
+        - Name: TargetGroup
+          Value: !GetAtt WebTargetGroup.TargetGroupFullName
+      EvaluationPeriods: 10 # N in M-out-of-N alarms
+      MetricName: HTTPCode_Target_5XX_Count
+      Namespace: AWS/ApplicationELB
+      Period: 60
+      Statistic: Sum
+      Threshold: 5
+      TreatMissingData: notBreaching
+  ProxyTargetGroupSustainedHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt ProxyTargetGroupSustainedHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref ProxyTaskLogGroup }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Play }
+  ProxyTargetGroupHttp5xxSpikeAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
+    Properties:
+      AlarmName: !Sub ERROR [Play] Proxy server <${EnvironmentTypeAbbreviation}> 5XX ERRORS SPIKE
       AlarmDescription: !Sub >-
         ${EnvironmentType} Play's feed proxy server is returning 5XX errors
         from the ECS service to the load balancer.
@@ -288,19 +326,19 @@ Resources:
           Value: !Ref AlbFullName
         - Name: TargetGroup
           Value: !GetAtt WebTargetGroup.TargetGroupFullName
-      EvaluationPeriods: 1
+      EvaluationPeriods: 1 # N in M-out-of-N alarms
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
       Period: 60
       Statistic: Sum
-      Threshold: 0
+      Threshold: 15
       TreatMissingData: notBreaching
   ProxyTargetGroupHttp5xxAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
     Properties:
       ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
-      AlarmArn: !GetAtt ProxyTargetGroupHttp5xxAlarm.Arn
+      AlarmArn: !GetAtt ProxyTargetGroupHttp5xxSpikeAlarm.Arn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
