Don't log hyphen IPs

--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -100,6 +100,8 @@ Resources:
             return ip;
           } else if (ip.match(IPV6_MASK)) {
             return ip.replace(IPV6_MASK, ':0');
+          } else if (ip === '-')
+            // that's ok
           } else {
             console.warn(`Unrecognized ${field}: ${ip}`);
             return ip;
