--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -100,7 +100,7 @@ Resources:
             return ip;
           } else if (ip.match(IPV6_MASK)) {
             return ip.replace(IPV6_MASK, ':0');
-          } else if (ip === '-')
+          } else if (ip === '-') {
             // that's ok
           } else {
             console.warn(`Unrecognized ${field}: ${ip}`);
