Update SES DKIM records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1071,26 +1071,43 @@ Resources:
           Type: CNAME
           Name: !Sub assets.themoth.${Domain}
   AmazonSes:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: SES DKIM
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        # us-east-1
+        - Name: !Sub gzyw7nc2rjfy5u6qplqkbbfuv4tdg5mc._domainkey.${Domain}
+          ResourceRecords:
             - gzyw7nc2rjfy5u6qplqkbbfuv4tdg5mc.dkim.amazonses.com.
-          TTL: "300"
+          TTL: "1800"
           Type: CNAME
-          Name: !Sub gzyw7nc2rjfy5u6qplqkbbfuv4tdg5mc._domainkey.${Domain}
-        - ResourceRecords:
+        - Name: !Sub yqwoyh6wt54oqnyelxkn5hdaxkk52kv6._domainkey.${Domain}
+          ResourceRecords:
             - yqwoyh6wt54oqnyelxkn5hdaxkk52kv6.dkim.amazonses.com.
-          TTL: "300"
+          TTL: "1800"
           Type: CNAME
-          Name: !Sub yqwoyh6wt54oqnyelxkn5hdaxkk52kv6._domainkey.${Domain}
-        - ResourceRecords:
+        - Name: !Sub dqoamfgwjnqyjzoe2rrvwkluoh7ee46v._domainkey.${Domain}
+          ResourceRecords:
             - dqoamfgwjnqyjzoe2rrvwkluoh7ee46v.dkim.amazonses.com.
-          TTL: "300"
+          TTL: "1800"
           Type: CNAME
-          Name: !Sub dqoamfgwjnqyjzoe2rrvwkluoh7ee46v._domainkey.${Domain}
+        # us-west-2
+        - Name: !Sub xu5fuikkoqczc37qnypztreuciznlxlj._domainkey.${Domain}
+          ResourceRecords:
+            - xu5fuikkoqczc37qnypztreuciznlxlj.dkim.amazonses.com.
+          TTL: "1800"
+          Type: CNAME
+        - Name: !Sub 7cdvqh6qizmzzc4cuft2zazdzpyuzpui._domainkey.${Domain}
+          ResourceRecords:
+            - 7cdvqh6qizmzzc4cuft2zazdzpyuzpui.dkim.amazonses.com.
+          TTL: "1800"
+          Type: CNAME
+        - Name: !Sub zbbjsux5mc2d7ihglk5hcnsz7q3tiuv7._domainkey.${Domain}
+          ResourceRecords:
+            - zbbjsux5mc2d7ihglk5hcnsz7q3tiuv7.dkim.amazonses.com.
+          TTL: "1800"
+          Type: CNAME
   Statuspage:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
