Add multi-region SES info

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -5,7 +5,7 @@ Description: >-
   Creates an ECS service for the public Exchange web server, along with target
   group and listener rule for the shared ALB. Also creates an IAM user and
   SES credentials for it. Also creates ECS services for SayWhen and the
-  Exchange workers.
+  Exchange workers. Assumes that SES has been configured in the region.
 
 Parameters:
   kWebContainerName:
