Improve SPF and DKIM records

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -169,6 +169,7 @@ Resources:
       RecordSets:
         - ResourceRecords:
             - '"google-site-verification=hajnqPJ2ynpAruXLjJfCHvnxX4J2IepG6dNRb6qDxws"'
+            - '"v=spf1 include:mail.zendesk.com -all"'
           TTL: "300"
           Type: TXT
           Name: !Ref Domain
@@ -198,6 +199,7 @@ Resources:
       Comment: Zendesk
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        # Domain Validation
         - ResourceRecords:
             - mail1.zendesk.com.
           TTL: "300"
@@ -218,6 +220,17 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub zendesk4.${Domain}
+        # DKIM
+        - Name: !Sub zendesk1._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk1._domainkey.zendesk.com.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub zendesk2._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk2._domainkey.zendesk.com.
+          TTL: "3600"
+          Type: CNAME
   Squarespace:
     Type: AWS::Route53::RecordSetGroup
     Properties:
