--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1140,31 +1140,43 @@ Resources:
       Comment: ZenDesk
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Sub help.${Domain}
+          ResourceRecords:
             - prx.zendesk.com.
           TTL: "300"
           Type: CNAME
-          Name: !Sub help.${Domain}
-        - ResourceRecords:
+        # Domain Validation
+        - Name: !Sub zendesk1.${Domain}
+          ResourceRecords:
             - mail1.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub zendesk1.${Domain}
-        - ResourceRecords:
+        - Name: !Sub zendesk2.${Domain}
+          ResourceRecords:
             - mail2.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub zendesk2.${Domain}
-        - ResourceRecords:
+        - Name: !Sub zendesk3.${Domain}
+          ResourceRecords:
             - mail3.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub zendesk3.${Domain}
-        - ResourceRecords:
+        - Name: !Sub zendesk4.${Domain}
+          ResourceRecords:
             - mail4.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
-          Name: !Sub zendesk4.${Domain}
+        # DKIM
+        - Name: !Sub zendesk1._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk1._domainkey.zendesk.com.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub zendesk2._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk2._domainkey.zendesk.com.
+          TTL: "3600"
+          Type: CNAME
   Squarespace:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
