--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -37,7 +37,7 @@ Resources:
         - Name: !Ref Domain
           ResourceRecords:
             # SPF
-            - '"v=spf1 include:mail.zendesk.com include:servers.mcsv.net ?all"'
+            - '"v=spf1 include:mail.zendesk.com -all"'
             # DMARC
             - '"v=DMARC1; p=none; pct=100; rua=mailto:dmarc-reports@prx.org; ruf=mailto:dmarc-reports@prx.org"'
             # Domain verification
@@ -110,25 +110,37 @@ Resources:
       Comment: Zendesk
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        # Domain Validation
         - Name: !Sub zendesk1.${Domain}
           ResourceRecords:
             - mail1.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
         - Name: !Sub zendesk2.${Domain}
           ResourceRecords:
             - mail2.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
         - Name: !Sub zendesk3.${Domain}
           ResourceRecords:
             - mail3.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
           Type: CNAME
         - Name: !Sub zendesk4.${Domain}
           ResourceRecords:
             - mail4.zendesk.com.
-          TTL: "300"
+          TTL: "3600"
+          Type: CNAME
+        # DKIM
+        - Name: !Sub zendesk1._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk1._domainkey.zendesk.com.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub zendesk2._domainkey.${Domain}
+          ResourceRecords:
+            - zendesk2._domainkey.zendesk.com.
+          TTL: "3600"
           Type: CNAME
   Feedburner:
     Type: AWS::Route53::RecordSetGroup
