Fix DMARC records

--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -38,10 +38,14 @@ Resources:
           ResourceRecords:
             # SPF
             - '"v=spf1 include:mail.zendesk.com -all"'
-            # DMARC
-            - '"v=DMARC1; p=none; pct=100; rua=mailto:dmarc-reports@prx.org; ruf=mailto:dmarc-reports@prx.org"'
             # Domain verification
             - '"google-site-verification=zFRPkYoCbmLhpl-z3WCBzd0uUXdlP50m39evhsNZHKQ"'
+          TTL: "300"
+          Type: TXT
+        # DMARC
+        - Name: !Sub _dmarc.${Domain}
+          ResourceRecords:
+            - '"v=DMARC1; p=none; pct=100; rua=mailto:dmarc-reports@prx.org; ruf=mailto:dmarc-reports@prx.org"'
           TTL: "300"
           Type: TXT
         - Name: !Sub zendesk_verification.${Domain}
