Update ACL on shipped logs

--- a/cdn/log-shipper.yml
+++ b/cdn/log-shipper.yml
@@ -178,6 +178,7 @@ Resources:
             const params = {
               Bucket: process.env.DESTINATION_BUCKET,
               Key: `${process.env.DESTINATION_PREFIX}/${Key.split('/').pop()}`,
+              ACL: 'bucket-owner-full-control',
               Body: buffer
             };
             if (datas.length > 0) {
