Permanently delete non-current object versions

--- a/storage/multi-region-replication/feeds.yml
+++ b/storage/multi-region-replication/feeds.yml
@@ -115,6 +115,10 @@ Resources:
             AllowedMethods: [GET]
             AllowedOrigins: ["*"]
             ExposedHeaders: []
+      LifecycleConfiguration:
+        Rules:
+          - NoncurrentVersionExpirationInDays: 1 # Permanently delete non-current versions
+            Status: Enabled
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
