--- a/storage/multi-region-replication/mediajoint.yml
+++ b/storage/multi-region-replication/mediajoint.yml
@@ -117,6 +117,8 @@ Resources:
             MaxAge: 3000
       LifecycleConfiguration:
         Rules:
+          - NoncurrentVersionExpirationInDays: 1 # Permanently delete non-current versions
+            Status: Enabled
           - Id: IA after 30 days
             Status: Enabled
             Transitions:
