--- a/storage/multi-region-replication/networks.yml
+++ b/storage/multi-region-replication/networks.yml
@@ -115,6 +115,8 @@ Resources:
             MaxAge: 3000
       LifecycleConfiguration:
         Rules:
+          - NoncurrentVersionExpirationInDays: 1 # Permanently delete non-current versions
+            Status: Enabled
           - Id: Move to IA
             Status: Enabled
             Transitions:
