Add Unseen Upside feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -177,3 +177,7 @@ Resources:
         # Milky Way Underground
         - { Type: A, Name: !Sub "pf2213mwug.${Domain}", AliasTarget: { DNSName: "dfo3of5h5hu0t.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf2213mwug.${Domain}", AliasTarget: { DNSName: "dfo3of5h5hu0t.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Unseen Upside
+        - { Type: A, Name: !Sub "pf8327unse.${Domain}", AliasTarget: { DNSName: "d1b54pbn0l0sau.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8327unse.${Domain}", AliasTarget: { DNSName: "d1b54pbn0l0sau.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
